gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: hotel
spec:
  selector:
    istio: ingressgateway # Must match label in istio ingress service
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
